removing tostring method out of buffer and sending to string factory.

--- a/c/src/Makefile
+++ b/c/src/Makefile
@@ -165,8 +165,10 @@ dep:
 ../bld/./mprototype.o: ../include/mmemutils.h ../include/mbintree.h
 ../bld/./mrcstring.o: ../include/merror.h ../include/mfwddefs.h
 ../bld/./mrcstring.o: ../include/mrcstring.h ../include/mobject.h
-../bld/./mrcstring.o: ../include/mprototype.h ../include/mstringtable.h
-../bld/./mrcstring.o: ../include/mmemutils.h
+../bld/./mrcstring.o: ../include/mprototype.h ../include/mmemutils.h
+../bld/./mrcstringtable.o: ../include/mrcstringtable.h ../include/mfwddefs.h
+../bld/./mrcstringtable.o: ../include/mmemutils.h ../include/mbintree.h
+../bld/./mrcstringtable.o: ../include/marray.h
 ../bld/./msingletons.o: ../include/msingletons.h ../include/mfwddefs.h
 ../bld/./msingletons.o: ../include/mlibrary.h ../include/mstring.h
 ../bld/./msingletons.o: ../include/mobject.h ../include/mprototype.h
@@ -176,11 +178,7 @@ dep:
 ../bld/./mstringbuffer.o: ../include/mmemutils.h
 ../bld/./mstring.o: ../include/merror.h ../include/mfwddefs.h
 ../bld/./mstring.o: ../include/mstring.h ../include/mobject.h
-../bld/./mstring.o: ../include/mprototype.h ../include/mstringtable.h
-../bld/./mstring.o: ../include/mmemutils.h
-../bld/./mstringtable.o: ../include/mstringtable.h ../include/mfwddefs.h
-../bld/./mstringtable.o: ../include/mmemutils.h ../include/mbintree.h
-../bld/./mstringtable.o: ../include/marray.h
+../bld/./mstring.o: ../include/mprototype.h ../include/mmemutils.h
 ../bld/./mtable.o: ../include/mtable.h ../include/mfwddefs.h
 ../bld/./mtagnode.o: ../include/mnode.h ../include/mobject.h
 ../bld/./mtagnode.o: ../include/mprototype.h ../include/mfwddefs.h
